// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/BillsAndPayment/Isolate/Detail render 1`] = `
<Detail
  action={Array []}
  breadcrumb={
    Array [
      Object {
        "label": "Isolate",
        "url": "/isolate",
      },
      Object {
        "label": "1706658412",
      },
    ]
  }
  filter={Array []}
  loading={false}
  notFound={false}
  otherStatus={null}
  schema={
    Array [
      Object {
        "content": Array [
          Object {
            "properties": Object {
              "data": Object {
                "address": " Jl. C. Simanjuntak, Terban, Kec. Gondokusuman, Kota Yogyakarta, Daerah Istimewa , KOTA YOGYAKARTA,0",
                "am": null,
                "customerName": "TEST API MYCARRIER",
                "id": "634e2ea9bd93f000eb986c85",
                "isolateBy": null,
                "isolateDate": "2022-09-02 00:00:00",
                "product": "Metro E",
                "receipt": Array [],
                "regional": "REGION 4",
                "sid": "1706658412",
                "status": "Isolatedd",
                "submitDate": "2022-10-18T04:42:17.768Z",
              },
              "schema": Array [
                Object {
                  "grid": 12,
                  "label": "AM",
                  "name": "am",
                },
                Object {
                  "label": "SID",
                  "name": "sid",
                },
                Object {
                  "label": "PRODUCT/SERVICE",
                  "name": "product",
                },
                Object {
                  "label": "ISOLATE BY",
                  "name": "isolateBy",
                },
                Object {
                  "converter": [Function],
                  "label": "BILLING",
                  "name": "billing",
                },
                Object {
                  "converter": [Function],
                  "label": "DATE ISOLATE",
                  "name": "isolateDate",
                },
                Object {
                  "converter": [Function],
                  "label": "DATE SUBMIT",
                  "name": "submitDate",
                },
              ],
            },
            "title": "Product/Service Detail",
            "type": "information",
          },
          Object {
            "hidden": true,
            "properties": Object {
              "data": Object {
                "address": " Jl. C. Simanjuntak, Terban, Kec. Gondokusuman, Kota Yogyakarta, Daerah Istimewa , KOTA YOGYAKARTA,0",
                "am": null,
                "customerName": "TEST API MYCARRIER",
                "id": "634e2ea9bd93f000eb986c85",
                "isolateBy": null,
                "isolateDate": "2022-09-02 00:00:00",
                "product": "Metro E",
                "receipt": Array [],
                "regional": "REGION 4",
                "sid": "1706658412",
                "status": "Isolatedd",
                "submitDate": "2022-10-18T04:42:17.768Z",
              },
              "schema": Array [
                Object {
                  "name": "receipt",
                },
              ],
            },
            "title": "Document Attachment",
            "type": "attachment",
          },
        ],
        "gridProps": Object {
          "md": 6,
          "xs": 12,
        },
      },
      Object {
        "content": Array [
          Object {
            "properties": Object {
              "data": Object {
                "address": " Jl. C. Simanjuntak, Terban, Kec. Gondokusuman, Kota Yogyakarta, Daerah Istimewa , KOTA YOGYAKARTA,0",
                "am": null,
                "customerName": "TEST API MYCARRIER",
                "id": "634e2ea9bd93f000eb986c85",
                "isolateBy": null,
                "isolateDate": "2022-09-02 00:00:00",
                "product": "Metro E",
                "receipt": Array [],
                "regional": "REGION 4",
                "sid": "1706658412",
                "status": "Isolatedd",
                "submitDate": "2022-10-18T04:42:17.768Z",
              },
              "schema": Array [
                Object {
                  "grid": 12,
                  "label": "CUSTOMER NAME",
                  "name": "customerName",
                },
                Object {
                  "grid": 12,
                  "label": "ADDRESS",
                  "name": "address",
                },
                Object {
                  "label": "REGIONAL",
                  "name": "regional",
                },
              ],
            },
            "title": "Customer Information",
            "type": "information",
          },
        ],
        "gridProps": Object {
          "md": 6,
          "xs": 12,
        },
      },
    ]
  }
  search={null}
  status={
    Object {
      "children": "Isolatedd",
      "variant": "",
    }
  }
  tabs={
    Object {
      "onChange": [Function],
      "options": Array [],
      "value": "",
    }
  }
  withTopDivider={true}
/>
`;

exports[`src/containers/BillsAndPayment/Isolate/Detail render/empty 1`] = `
<Detail
  action={Array []}
  breadcrumb={
    Array [
      Object {
        "label": "Isolate",
        "url": "/isolate",
      },
      Object {
        "label": "-",
      },
    ]
  }
  filter={Array []}
  loading={false}
  notFound={true}
  otherStatus={null}
  schema={
    Array [
      Object {
        "content": Array [
          Object {
            "properties": Object {
              "data": Object {},
              "schema": Array [
                Object {
                  "grid": 12,
                  "label": "AM",
                  "name": "am",
                },
                Object {
                  "label": "SID",
                  "name": "sid",
                },
                Object {
                  "label": "PRODUCT/SERVICE",
                  "name": "product",
                },
                Object {
                  "label": "ISOLATE BY",
                  "name": "isolateBy",
                },
                Object {
                  "converter": [Function],
                  "label": "BILLING",
                  "name": "billing",
                },
                Object {
                  "converter": [Function],
                  "label": "DATE ISOLATE",
                  "name": "isolateDate",
                },
                Object {
                  "converter": [Function],
                  "label": "DATE SUBMIT",
                  "name": "submitDate",
                },
              ],
            },
            "title": "Product/Service Detail",
            "type": "information",
          },
          Object {
            "hidden": true,
            "properties": Object {
              "data": Object {},
              "schema": Array [
                Object {
                  "name": "receipt",
                },
              ],
            },
            "title": "Document Attachment",
            "type": "attachment",
          },
        ],
        "gridProps": Object {
          "md": 6,
          "xs": 12,
        },
      },
      Object {
        "content": Array [
          Object {
            "properties": Object {
              "data": Object {},
              "schema": Array [
                Object {
                  "grid": 12,
                  "label": "CUSTOMER NAME",
                  "name": "customerName",
                },
                Object {
                  "grid": 12,
                  "label": "ADDRESS",
                  "name": "address",
                },
                Object {
                  "label": "REGIONAL",
                  "name": "regional",
                },
              ],
            },
            "title": "Customer Information",
            "type": "information",
          },
        ],
        "gridProps": Object {
          "md": 6,
          "xs": 12,
        },
      },
    ]
  }
  search={null}
  status={null}
  tabs={
    Object {
      "onChange": [Function],
      "options": Array [],
      "value": "",
    }
  }
  withTopDivider={true}
/>
`;
